[gd_scene load_steps=4 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/scenes/main_scene.gd" id="1_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/ui/menu_ui.tscn" id="2_0x0x0"]
[ext_resource type="PackedScene" path="res://scenes/ui/game_ui.tscn" id="3_0x0x0"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="MenuUI" parent="UI" instance=ExtResource("2_0x0x0")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameUI" parent="UI" instance=ExtResource("3_0x0x0")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="SettingsUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="LoadingUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false

[node name="GameWorld" type="Node2D" parent="."]

[node name="Systems" type="Node" parent="."] 